<resources>
    <string name="app_name">Jegyzet</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="loginWithGoogle">Bejelentkezés google fiókkal</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="product_description">Termék leírása.</string>
    <string name="notes">Jegyzetek</string>
    <string name="users">Felhasználók</string>
    <string name="edit_note_button">MÓDOSÍTÁS</string>
    <string name="note_desc">Jegyzet leírás</string>
    <string name="note_title">Jegyzet cím</string>
    <string name="roles">Jogosultságok</string>
    <string name="delete">Törlés</string>

    <array name="note_title">
        <item>asasdf</item>
        <item>ertfer</item>
        <item>erger</item>
    </array>

    <array name="note_desc">
        <item>asasdf</item>
        <item>ertfer</item>
        <item>erger</item>
    </array>

    <array name="role_id">
        <item>UR123</item>
        <item>UR321</item>
        <item>UR231</item>
    </array>

    <array name="role_href">
        <item>endpoint/usersandroles/v1/role/UR123</item>
        <item>endpoint/usersandroles/v1/role/UR321</item>
        <item>endpoint/usersandroles/v1/role/UR231</item>
    </array>

    <array name="role_involvementRole">
        <item>configure IPTV and watch news</item>
        <item>configure IPTV</item>
        <item>watch news</item>
    </array>

</resources>